syntax = "proto3";


option java_package = "ar.edu.itba.pod.grpc.admin";
option java_multiple_files = true;

import "commons/error.proto";

package admin; //TODO: revisar

//TODO: preguntar esto de devolver el Sector, es ineficiente mandar datos que ya conozco
//Esta bien sacarlos del request?

service AdminService {
  rpc AddSector(SectorRequest) returns (SectorResponse); //1
  rpc AddRange(RangeRequest) returns (RangeResponse); //2,3
  rpc AddFlights(stream FlightMessage) returns (stream FlightResponse);//1,4 //TODO: ver si hacer Ãºnico, y manejarlo en el cliente
}

message SectorRequest {
  string sector = 1;
}

message SectorResponse{
  string sector = 1;
}

message RangeRequest{
  SectorRequest sector = 1; //TODO: ver si no conviene el string directo (si no en algunos es el string, en otros el message)
  int32 count = 2;
}

message RangeResponse{
  int32 start = 1;
  int32 end = 2;
  SectorResponse sector = 3;
}

message FlightMessage{
  string booking = 1;
  string airline = 2;
  string flight = 3;
}

message FlightResponse{
  oneof try{
    FlightMessage flight = 1;
    Error error = 2;
  }
}

