syntax = "proto3";

option java_package = "ar.edu.itba.pod.grpc.commons";
option java_multiple_files = true;


enum Error{
  UNSPECIFIED = 0;
  ALREADY_EXISTS = 1;
  INVALID_SECTOR = 2;
  INVALID_RANGE = 3;
  FLIGHT_ALREADY_USED = 4;
  EMPTY_AIRPORT = 5;
  EMPTY_PASSENGERS = 6;
  FLIGHT_ALREADY_ASSIGNED = 7;
  PENDING_REQUEST_FOR_FLIGHT = 8;
  FLIGHT_ALREADY_CHECKED_IN = 9;
}